@@ -30,11 +30,11 @@
  *** Network.
  ***/
 
-#define ISC_PLATFORM_HAVEIPV6
 #if _MSC_VER > 1200
+#define ISC_PLATFORM_HAVEIPV6
 #define ISC_PLATFORM_HAVEIN6PKTINFO
-#endif
 #define ISC_PLATFORM_HAVESCOPEID
+#endif
 #define ISC_PLATFORM_NEEDPORTT
 #undef MSG_TRUNC
 #define ISC_PLATFORM_NEEDNTOP
