@@ -1,3 +1,7 @@
+* [Bug 1448] Some macros not correctly conditionally or absolutely defined
+  on Windows
+* [Bug 1449] ntpsim.h should be conditionally in ntp_config.c
+* [Bug 1450] Option to exclude warnings not unconditionally defined on Windows
 ---
 
 * [Bug 1445] IRIX does not have -lcap or support linux capabilities.
